[package]
name = "ackreport"
version = "0.2.2"
authors = ["roller@gmail.com"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
clap = "~2.32.0"
get_if_addrs = "0.5.3"
hostname = "^0.1"
log = "0.4"
env_logger = "0.5.11"
itertools = "0.8"
tabwriter = "1.1.0"
rayon = "1.1.0"
duration-string = "0.0.6"
rustls = "0.18"
webpki = "0.21"
webpki-roots = "0.20"
rustls-native-certs = "0.4"
